import "DataChunk.proto";

option java_outer_classname="GetChunkResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message GetChunkResponse 
{
	optional DataChunk dataChunk = 1;
}